--- a/index.html
+++ b/index.html
@@ -27,23 +27,26 @@
   <link href="/assets/css/style.css" rel="stylesheet">
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/ff3cb8b610.js" crossorigin="anonymous"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-HD00BWQM92');
+  </script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
 
-  gtag('config', 'G-HD00BWQM92');
-</script>
 
 
 <body>
   <!-- Banner de cookies -->
   <div class="cookie-banner" id="cookie-banner">
-    <p>Este sitio utiliza cookies para mejorar su experiencia. <a href="/pages/more-info-cookies.html" target="_blank">Más información</a></p>
+    <p>Este sitio utiliza cookies para mejorar su experiencia. <a href="/pages/more-info-cookies.html"
+        target="_blank">Más información</a></p>
     <button id="accept-cookies">Aceptar</button>
   </div>
 
