--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -16,17 +16,17 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/gracias.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-HD00BWQM92');
+    </script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HD00BWQM92');
-</script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -75,8 +75,9 @@
         <div class="container" style="text-align: center; margin-bottom: 60px;">
             <h3>Si necesitas información adicional o urgente hablemos por Whatsapp</h3>
             <div class="header-content text-center">
-                <a href="https://wa.me/+525523398704?text=Hola hablo a Don Che. Me interesa Información sobre los sitios web" class="btn call-action"><span>Whatsapp</span></a>
-              </div>   
+                <a href="https://wa.me/+525523398704?text=Hola hablo a Don Che. Me interesa Información sobre los sitios web"
+                    class="btn call-action"><span>Whatsapp</span></a>
+            </div>
 
         </div>
     </section>
