Corrigiendo texto de portafolio

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
               <a class="nav-link active" aria-current="page" href="#">Paginas Web</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Gestion de Ads</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">SEO</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link active" href="#">Funnel</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Portafolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Servicios</a>
             </li>
 
           </ul>
@@ -136,9 +136,13 @@
         <div class="project-card">
           <div class="description">
             <h3>Seriart | Fotos de graduación</h3>
-            <p class="description-p">Seriart Teziutlán es una agencia de fotografia experta en fotos de graduación. Con
-              su landing page diseñada para convertir visitantes en clientes lograron llenar su agenda con sesiones
-              fotograficas de bachilleratos y universidades de Puebla y Veracruz</p>
+            <p class="description-p">
+              Seriart Teziutlán es una agencia especializada en capturar los momentos más importantes de las
+              graduaciones. Su <b>landing page</b> está diseñada específicamente para convertir <b>visitantes en clientes</b>
+              satisfechos. Gracias a ello, han llenado su agenda con sesiones fotográficas para bachilleratos y
+              universidades en Puebla y Veracruz. Seriart Teziutlán es la elección ideal para inmortalizar los recuerdos
+              más preciados de sus clientes.
+            </p>
             <p>Servicio que se le brinda: Landing Page + Meta Ads</p>
           </div>
           <img src="/assets/images/SERIART-TEZIUTLAN-TESTIMONIO.jpg" alt="Landing page fotografia">
@@ -148,9 +152,12 @@
           <img src="/assets/images/SIERRAINMOBILIARIA-TESTIMONIO.jpg" alt="Sitio web agencia inmobiliaria">
           <div class="description">
             <h3>Sierra Raíces Inmobiliaría</h3>
-            <p class="description-p">Esta agencia inmobiliaria de terrenos y departamentos en Veracruz. Recibe a sus
-              clientes en su sitio web profesional diseñado para generar confianza y mostrar las diferentes propiedades
-              disponibles. Así como un sistema de pago online.</p>
+            <p class="description-p">
+              Esta agencia inmobiliaria, especializada en terrenos y departamentos en Veracruz, recibe a sus clientes en
+              su <b>sitio web profesional</b>, diseñado para generar confianza y mostrar las diversas propiedades disponibles.
+              Además, cuenta con un <b>sistema de pago en línea</b> que facilita las transacciones de manera segura y
+              conveniente.
+            </p>
             <p>Servicio que se le brinda: Sitio Web + Google Ads</p>
           </div>
 
