encabezado de portafolio

--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
     <div class="container">
       <p style="font-weight: bold;">Portafolio</p>
       <h2><span class="color-head">Proyectos</span> Recientes</h2>
-      <p>Mediante la pasion por el desarrollo web y nuestra expertis en marketing digital producimos resultados
-        extraordinarios</p>
+      <p>Con una pasión inigualable por el desarrollo web y una sólida experiencia en marketing digital, producimos resultados extraordinarios.</p>
 
       <div class="projects-container">
         <div class="project-card">
