Arreglando botones y pagina de gracias con mensaje de ebook

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <!-- Estilos CSS -->
   <link href="/assets/css/style.css" rel="stylesheet">
+  
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/ff3cb8b610.js" crossorigin="anonymous"></script>
 
@@ -74,6 +75,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Precios</a>
             </li>
 
           </ul>
@@ -209,10 +213,7 @@
     <div class="container mind">
       <h3>¿Tienes un proyecto en mente?</h3>
       <p>Creemos algo juntos.</p>
-      <a href="#">
-        <a href="https://wa.me/+525523398704?text=Hola hablo a Don Che. Me interesa Información sobre los sitios web"
-          target="_blank"><button class="btn btn-contact">Contacto</button></a>
-      </a>
+        <a href="/pages/cotizacion.html" class="btn call-action"><span>Hacer cotización</span></a>
     </div>
   </section>
 
