enlaces whats de paquetes

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
             </ul>
           </div>
 
-          <a href="#">
+          <a href="https://wa.me/+525523398704?text=Hola, me gustaría un sitio web para posicionar mi negocio en internet"
+          target="_blank">
             <button class="btn btn-obtener">Comenzar</button>
           </a>
 
@@ -277,7 +278,8 @@
             </ul>
           </div>
 
-          <a href="#">
+          <a href="https://wa.me/+525523398704?text=Hola, me gustaría un sitio web para interactuar con mis clientes y consolidar mi empresa"
+          target="_blank">
             <button class="btn btn-obtener-main">Comenzar</button>
           </a>
         </div>
@@ -305,7 +307,9 @@
             </ul>
           </div>
 
-          <a href="#">
+          <a href="https://wa.me/+525523398704?text=Hola, me gustaría conseguir más clientes  para mi empresa"
+
+          target="_blank">
             <button class="btn btn-obtener">Comenzar</button>
           </a>
         </div>
@@ -350,7 +354,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <script src="/assets/js/script.js"></script>
+
+  <script src="/assets/js/cookies.js"></script>
 </body>
 
 </html>
