--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -73,7 +73,7 @@
     </section>
 
     <div class="container">
-        <form class="contact-form" name="contact" method="POST" action="/pages/gracias.html" data-netlify="true"
+        <form class="contact-form sigup-form" name="contact" method="POST" action="/pages/gracias.html" data-netlify="true"
             netlify>
             <div class="form-group">
                 <label for="first-name">Nombre <span>*</span></label>
@@ -157,7 +157,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js"></script>
+        <script src="/assets/js/sendEmail.js"></script>
 </body>
 
 </html>
