Landing page de presencia online

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="card-content">
             <img src="/assets/images/pricing-01.svg" alt="pricing-01">
             <h3>Presencia en linea</h3>
-            <p>$7,000</p>
+            <p>$2,900</p>
             <p>MXN</p>
             <br>
             <p class="color-head">Empresa en crecimiento</p>
@@ -246,8 +246,7 @@
             </ul>
           </div>
 
-          <a href="https://wa.me/+525523398704?text=Hola, me gustaría un sitio web para posicionar mi negocio en internet"
-          target="_blank">
+          <a href="/pages/presencia_online.html">
             <button class="btn btn-obtener">Comenzar</button>
           </a>
 
