--- a/pages/presencia_online.html
+++ b/pages/presencia_online.html
@@ -35,7 +35,7 @@
                 <h1>Miles de personas buscan tus servicios. <span class="hero-spam">¡Haz que te encuentren en Google
                         Maps! </span> </h1>
                 <p>Posicionamos tu negocio en Google Maps y convertimos las búsquedas en clientes potenciales</p>
-                <a href="#cta" class="cta-button">Obtén precio especial</a>
+                <a href="#obtener" class="cta-button">Obtén precio especial</a>
             </div>
             <div class="hero-image">
                 <img src="/assets/images/hero-landing-page.png" alt="posicionamiento web">
@@ -93,7 +93,7 @@
         
     </section>
 
-    <section class="contact-form">
+    <section id="obtener" class="contact-form">
         <h3>Registrate para aprovechar tu precio especial por apertura</h3>
         <div class="container">
             <form name="presencia_online" method="POST" action="/pages/gracias.html" data-netlify="true">
