--- a/pages/presencia_online.html
+++ b/pages/presencia_online.html
@@ -116,7 +116,7 @@
     <section id="obtener" class="contact-form">
         <h3>Registrate para aprovechar tu precio especial por apertura</h3>
         <div class="container">
-            <form name="presencia_online" method="POST" action="/pages/gracias.html" data-netlify="true">
+            <form name="presencia_onlinee" method="POST" action="/pages/gracias.html" data-netlify="true">
                 <input type="hidden" name="form-name" value="contact">
                 <div class="form-group">
                     <label for="name">Nombre</label>
