moviendole al input

--- a/pages/presencia_online.html
+++ b/pages/presencia_online.html
@@ -116,8 +116,8 @@
     <section id="obtener" class="contact-form">
         <h3>Registrate para aprovechar tu precio especial por apertura</h3>
         <div class="container">
-            <form name="presencia_onlinee" method="POST" action="/pages/gracias.html" netlify>
-                <input type="hidden" name="form-name" value="contact">
+            <form name="presencia_online" method="POST" action="/pages/gracias.html" netlify>
+                <input type="hidden" name="form-name" value="presencia_online">
                 <div class="form-group">
                     <label for="name">Nombre</label>
                     <input type="text" id="name" name="name" placeholder="Nombre y apellidos" required>
