--- a/pages/presencia_online.html
+++ b/pages/presencia_online.html
@@ -55,7 +55,7 @@
                 <h1>Miles de personas buscan tus servicios. <span class="hero-spam">¡Haz que te encuentren en Google
                         Maps! </span> </h1>
                 <p>Posicionamos tu negocio en Google Maps y convertimos las búsquedas en clientes potenciales</p>
-                <a href="#obtener" class="cta-button">Obtén precio especial</a>
+                <a href="#obtener" class="cta-button">Obtén una consulta gratuita</a>
             </div>
             <div class="hero-image">
                 <img src="/assets/images/hero-landing-page.png" alt="posicionamiento web">
@@ -114,7 +114,7 @@
     </section>
 
     <section id="obtener" class="contact-form">
-        <h3>Registrate para aprovechar tu precio especial por apertura</h3>
+        <h3>Obtén una demostración sin compromiso</h3>
         <div class="container">
             <form name="presencia_online" method="POST" action="/pages/gracias.html" netlify>
                 <input type="hidden" name="form-name" value="presencia_online">
@@ -135,7 +135,7 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Tu correo electronico" required>
                 </div>
-                <button type="submit">Obtener</button>
+                <button type="submit">Obtener consulta</button>
             </form>
         </div>
     </section>
