agregando btn whatsapp

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Paginas Web</a>
+              <a class="nav-link active" aria-current="page" href="#pricing">Paginas Web</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Funnel</a>
+              <a class="nav-link active" href="#pricing">Funnel</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Portafolio</a>
+              <a class="nav-link active" href="#portfolio">Portafolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Servicios</a>
+              <a class="nav-link active" href="#service">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Precios</a>
+              <a class="nav-link active" href="#pricing">Precios</a>
             </li>
 
           </ul>
@@ -129,7 +129,7 @@
   </section>
 
   <!-- PROYECTOS RECIENTES -->
-  <section class="recent-projects">
+  <section class="recent-projects" id="portfolio">
     <div class="container">
       <p style="font-weight: bold;">Portafolio</p>
       <h2><span class="color-head">Proyectos</span> Recientes</h2>
@@ -174,7 +174,7 @@
       en Puebla</h1>
   </section>
 
-  <section class="services">
+  <section class="services" id="service">
     <div class="container">
       <p class="explain"><b>Don Che</b> se compromete a brindar soporte de TI experto, <b>duradero</b> y excepcional a
         todos y cada uno de los clientes con los que trabajamos.</p>
@@ -217,7 +217,7 @@
     </div>
   </section>
 
-  <section class="pricing">
+  <section class="pricing" id="pricing">
     <div class="container">
       <p class="explain">Planes <b>económicos</b> para cada <b>etapa</b> de su empresa.</p>
       <p class="color-p">Nuestros Precios</p>
@@ -348,6 +348,11 @@
     </div>
     <!-- Copyright -->
   </footer>
+
+      <!-- Botón de WhatsApp flotante -->
+      <a href="https://wa.me/5215523398704" class="whatsapp-float" target="_blank">
+        <img src="/assets/images/whatsapp-flotante.png" alt="WhatsApp">
+    </a>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
