--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     crossorigin="anonymous"></script>
 
   <script src="/assets/js/cookies.js"></script>
+  <script src="/assets/js/app.js"></script>
 </body>
 
 </html>
