--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       <p>Con una pasión inigualable por el desarrollo web y una sólida experiencia en marketing digital, producimos resultados extraordinarios.</p>
 
       <div class="projects-container">
-        <div class="project-card">
-          <div class="description">
+        <div class="project-card reverse">
+          <div class="description ">
             <h3>Seriart | Fotos de graduación</h3>
             <p class="description-p">
               Seriart Teziutlán es una agencia especializada en capturar los momentos más importantes de las
@@ -149,7 +149,6 @@
             <p>Servicio que se le brinda: Landing Page + Meta Ads</p>
           </div>
           <img src="/assets/images/SERIART-TEZIUTLAN-TESTIMONIO.jpg" alt="Landing page fotografia">
-
         </div>
         <div class="project-card">
           <img src="/assets/images/SIERRAINMOBILIARIA-TESTIMONIO.jpg" alt="Sitio web agencia inmobiliaria">
