arreglando boton whatsapp

--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
               <li>Presentación del negocio</li>
               <li>Servicios/productos principales</li>
               <li>Integración con Redes Sociales</li>
-              <li>Formulario de contacto</li>
               <li>Información de contacto</li>
               <li>Mapa de Ubicación</li>
               <li>Registro en Google My Business</li>
-              <li><b>Enlace de Whatsapp</b></li>
+              <li><b>Dos videos de redes sociales</b></li>
+              <li><b>Chatbot conteston</b></li>
             </ul>
           </div>
 
