--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Estilos CSS -->
   <link href="/assets/css/style.css" rel="stylesheet">
-  
+
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/ff3cb8b610.js" crossorigin="anonymous"></script>
 
@@ -133,7 +133,8 @@
     <div class="container">
       <p style="font-weight: bold;">Portafolio</p>
       <h2><span class="color-head">Proyectos</span> Recientes</h2>
-      <p>Con una pasión inigualable por el desarrollo web y una sólida experiencia en marketing digital, producimos resultados extraordinarios.</p>
+      <p>Con una pasión inigualable por el desarrollo web y una sólida experiencia en marketing digital, producimos
+        resultados extraordinarios.</p>
 
       <div class="projects-container">
         <div class="project-card reverse">
@@ -141,7 +142,8 @@
             <h3>Seriart | Fotos de graduación</h3>
             <p class="description-p">
               Seriart Teziutlán es una agencia especializada en capturar los momentos más importantes de las
-              graduaciones. Su <b>landing page</b> está diseñada específicamente para convertir <b>visitantes en clientes</b>
+              graduaciones. Su <b>landing page</b> está diseñada específicamente para convertir <b>visitantes en
+                clientes</b>
               satisfechos. Gracias a ello, han llenado su agenda con sesiones fotográficas para bachilleratos y
               universidades en Puebla y Veracruz. Seriart Teziutlán es la elección ideal para inmortalizar los recuerdos
               más preciados de sus clientes.
@@ -156,7 +158,8 @@
             <h3>Sierra Raíces Inmobiliaría</h3>
             <p class="description-p">
               Esta agencia inmobiliaria, especializada en terrenos y departamentos en Veracruz, recibe a sus clientes en
-              su <b>sitio web profesional</b>, diseñado para generar confianza y mostrar las diversas propiedades disponibles.
+              su <b>sitio web profesional</b>, diseñado para generar confianza y mostrar las diversas propiedades
+              disponibles.
               Además, cuenta con un <b>sistema de pago en línea</b> que facilita las transacciones de manera segura y
               conveniente.
             </p>
@@ -212,7 +215,7 @@
     <div class="container mind">
       <h3>¿Tienes un proyecto en mente?</h3>
       <p>Creemos algo juntos.</p>
-        <a href="/pages/cotizacion.html" class="btn call-action"><span>Hacer cotización</span></a>
+      <a href="/pages/cotizacion.html" class="btn call-action"><span>Hacer cotización</span></a>
     </div>
   </section>
 
@@ -277,7 +280,7 @@
           </div>
 
           <a href="https://wa.me/+525523398704?text=Hola, me gustaría un sitio web para interactuar con mis clientes y consolidar mi empresa"
-          target="_blank">
+            target="_blank">
             <button class="btn btn-obtener-main">Comenzar</button>
           </a>
         </div>
@@ -306,8 +309,7 @@
           </div>
 
           <a href="https://wa.me/+525523398704?text=Hola, me gustaría conseguir más clientes  para mi empresa"
-
-          target="_blank">
+            target="_blank">
             <button class="btn btn-obtener">Comenzar</button>
           </a>
         </div>
@@ -348,10 +350,12 @@
     <!-- Copyright -->
   </footer>
 
-      <!-- Botón de WhatsApp flotante -->
-      <a href="https://wa.me/5215523398704" class="whatsapp-float" target="_blank">
-        <img src="/assets/images/whatsapp-flotante.png" alt="WhatsApp">
-    </a>
+  <!-- Botón de WhatsApp flotante -->
+  <a href="https://wa.me/5215523398704?text=Hola%2C%20me%20gustar%C3%ADa%20hacer%20crecer%20mi%20negocio%20en%20internet."
+    class="whatsapp-float" target="_blank">
+    <img src="/assets/images/whatsapp-flotante.png" alt="WhatsApp">
+  </a>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
