Agregando seccion reels

--- a/index.html
+++ b/index.html
@@ -128,6 +128,26 @@
     </div>
   </section>
 
+  <!-- Reel y tiktos -->
+  <section class="reels">
+    <h2>Ideas de Reels y Tiktoks para tu negocio</h2>
+    <div class="reels-container">
+      <video class="reel-video reel-video-1" controls>
+        <source src="/assets/reels/reel-1.mp4" type="video/mp4">
+      </video>
+      <video class="reel-video reel-video-2" controls>
+        <source src="/assets/reels/reel-2.mp4" type="video/mp4">
+      </video>
+      <video class="reel-video reel-video-3" controls>
+        <source src="/assets/reels/reel-3.mp4" type="video/mp4">
+      </video>
+      <video class="reel-video reel-video-4" controls>
+        <source src="/assets/reels/reel-4.mp4" type="video/mp4">
+      </video>
+
+    </div>
+  </section>
+
   <!-- PROYECTOS RECIENTES -->
   <section class="recent-projects" id="portfolio">
     <div class="container">
