--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
       <video class="reel-video reel-video-4" controls>
         <source src="/assets/reels/reel-4.mp4" type="video/mp4">
       </video>
+      <video class="reel-video reel-video-5" controls>
+        <source src="/assets/reels/reel-5.mp4" type="video/mp4">
+      </video>
 
     </div>
   </section>
