--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 
   <!-- Estilos CSS -->
   <link href="/assets/css/style.css" rel="stylesheet">
@@ -103,7 +100,7 @@
   
           <!-- Contenido imagen -->
           <div class="col-lg-6">
-            <img src="/assets/img/una_persona_visitando_un_sitio_web.jpeg" alt="Imagen representativa" class="img-fluid">
+            <img src="/assets/images/una_persona_visitando_un_sitio_web.jpeg" alt="Imagen representativa" class="img-fluid">
           </div>
         </div>
       </div>
@@ -115,7 +112,7 @@
         <div class="row align-items-center">
           <!-- Imagen representativa -->
           <div class="col-lg-5">
-            <img src="/assets/img/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Imagen representativa"
+            <img src="/assets/images/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Imagen representativa"
               class="img-fluid">
           </div>
   
@@ -155,7 +152,7 @@
           <!-- Tarjeta 1 -->
           <div class="col-lg-3">
             <div class="card">
-              <img src="/assets/img/sitio_web_personalizado_para_un_negocio.jpeg" alt="Diseño de paginas web"
+              <img src="/assets/images/sitio_web_personalizado_para_un_negocio.jpeg" alt="Diseño de paginas web"
                 class="card-img-top">
               <div class="card-body">
                 <h3 class="card-title">Diseño web personalizado</h3>
@@ -167,7 +164,7 @@
           <!-- Tarjeta 1 -->
           <div class="col-lg-3">
             <div class="card">
-              <img src="/assets/img/premio_con_numero_1.jpeg" alt="Posicionamiento SEO"
+              <img src="/assets/images/premio_con_numero_1.jpeg" alt="Posicionamiento SEO"
                 class="card-img-top">
               <div class="card-body">
                 <h3 class="card-title">Posicionamiento SEO</h3>
@@ -179,7 +176,7 @@
           <!-- Tarjeta 1 -->
           <div class="col-lg-3">
             <div class="card">
-              <img src="/assets/img/set_de_grabaci_n_de_un_restaurante.jpeg" alt="Contenido multimedia"
+              <img src="/assets/images/set_de_grabaci_n_de_un_restaurante.jpeg" alt="Contenido multimedia"
                 class="card-img-top">
               <div class="card-body">
                 <h3 class="card-title">Contenido multimedia de calidad</h3>
@@ -192,7 +189,7 @@
           <!-- Tarjeta 1 -->
           <div class="col-lg-3">
             <div class="card">
-              <img src="/assets/img/campa_as_publicitarias_sem.jpeg" alt="Campaña publicitaria" class="card-img-top">
+              <img src="/assets/images/campa_as_publicitarias_sem.jpeg" alt="Campaña publicitaria" class="card-img-top">
               <div class="card-body">
                 <h3 class="card-title">Campañas publicitarias SEM</h3>
                 <p class="card-text">Patrocina paginas web relacionadas a tu negocio para darte a conocer y generar mas
