propiedad fixed a nav

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agencia de Marketing Digital | Leads Don Che</title>
+  <title>Diseño de Paginas Web | Leads Don Che</title>
   <meta name="description"
     content="Agencia de desarrollo web y marketing digital en Puebla. Expertos en diseño de landing page. Creacion de sitios web con animaciones. Promocionando en Google Ads. Publicaciones de Faceebook Ads.">
 
@@ -50,42 +50,42 @@
 
 
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand" href="#">
-          <img src="/assets/img/DON CHE.png" alt="Logo" style="width: 50px; height: 50px;">
-        </a>
-  
-        <!-- Menú -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
-          <a class="btn btn-success" href="https://wa.me/5215523398704" target="_blank">
-            <i class="fa-brands fa-whatsapp"></i> Contacto
+    <div class="header-fixed">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <!-- Logo -->
+          <a class="navbar-brand" href="#">
+            <span class="head-span">Leads Don Che</span>
           </a>
+    
+          <!-- Menú -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Acerca de</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+            <a class="btn btn-success" href="https://wa.me/5215523398704" target="_blank">
+              <i class="fa-brands fa-whatsapp"></i> Contacto
+            </a>
+          </div>
         </div>
-  
-        <!-- Botón de contacto a WhatsApp -->
-  
-      </div>
-    </nav>
+      </nav>
+    </div>
+    
     <!-- Sección Hero -->
     <section class="hero">
       <div class="container">
