--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
     <!-- Barra de navegación -->
     <div class="header-fixed">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="#">
-            <span class="head-span">Leads Don Che</span>
+            <span class="head-span" style="font-weight: 700;">Leads Don Che</span>
           </a>
     
           <!-- Menú -->
@@ -78,7 +78,7 @@
                 <a class="nav-link" href="#">Contacto</a>
               </li>
             </ul>
-            <a class="btn btn-success" href="https://wa.me/5215523398704" target="_blank">
+            <a class="btn btn-success btn-lg" href="https://wa.me/5215523398704" target="_blank">
               <i class="fa-brands fa-whatsapp"></i> Contacto
             </a>
           </div>
