--- a/index.html
+++ b/index.html
@@ -49,45 +49,13 @@
   </div>
 
 
-    <!-- Barra de navegación -->
-    <div class="header-fixed">
-      <nav class="navbar navbar-expand-lg navbar-light ">
-        <div class="container-fluid">
-          <!-- Logo -->
-          <a class="navbar-brand" href="#">
-            <span class="head-span" style="font-weight: 700;">Leads Don Che</span>
-          </a>
-    
-          <!-- Menú -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Acerca de</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-              </li>
-            </ul>
-            <a class="btn btn-success btn-lg" href="https://wa.me/5215523398704" target="_blank">
-              <i class="fa-brands fa-whatsapp"></i> Contacto
-            </a>
-          </div>
-        </div>
-      </nav>
-    </div>
-    
+    <!-- Barra de navegación -->  
     <!-- Sección Hero -->
+
     <section class="hero">
+      <div class="logo">
+        <h2>Lead Don Che</h2>
+       </div>
       <div class="container">
         <div class="row align-items-center">
           <!-- Contenido texto -->
