--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="hero">
       <div class="logo">
-        <h2>Lead Don Che</h2>
+        <h2>Leads Don Che</h2>
        </div>
       <div class="container">
         <div class="row align-items-center">
