logo display none

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
     <section class="hero">
       <div class="logo">
-        <img src="/assets/images/DON CHE.png" alt="">
+        <img src="/assets/images/leads-don che.svg" alt="leadsdonche">
+        <h2>Leads Don Che</h2>
        </div>
       <div class="container">
         <div class="row align-items-center">
