--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <h1 class="display-4">Impulsa tu negocio en línea con <span class="head-span">páginas web</span> diseñadas a tu medida</h1>
             <p class="lead">Creamos sitios web impactantes y optimizados para que tu pyme destaque en el mundo digital.
             </p>
-            <button class="btn btn-primary btn-lg">¡Haz una cotización!</button>
+            <!-- <button class="btn btn-primary btn-lg">¡Haz una cotización!</button> -->
+            <button class="btn-modern">
+              <span>Click Me</span>
+          </button>
           </div>
   
           <!-- Contenido imagen -->
