Distancia entre elementos de hero

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </p>
             <!-- <button class="btn btn-primary btn-lg">¡Haz una cotización!</button> -->
             <button class="btn-modern">
-              <span>Click Me</span>
+              <span>Cotizar</span>
           </button>
           </div>
   
