agregando imagenes absolute

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
           </div>
   
           <!-- Contenido imagen -->
-          <div class="col-lg-6">
-            <img src="/assets/images/una_persona_visitando_un_sitio_web.jpeg" alt="Imagen representativa" class="img-fluid">
+          <div class="col-lg-6 position-relative">
+            <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web" class="img-fluid DESKTOP">
+            <img src="/assets/images/DISEÑO PAGINA WEN MOBILE.png" alt="Diseño de paginas web" class="img-fluid MOBILE">
           </div>
+          
+          
         </div>
       </div>
     </section>
