--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           </div>
   
           <!-- Contenido imagen -->
-          <div class="col-lg-6 position-relative">
-            <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web" class="img-fluid DESKTOP">
-            <img src="/assets/images/DISEÑO PAGINA WEN MOBILE.png" alt="Diseño de paginas web" class="img-fluid MOBILE">
+          <div class="col-lg-6 position-relative hero-imagenes">
+            <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web" class="img-fluid img-desktop">
+            <img src="/assets/images/DISEÑO PAGINA WEN MOBILE.png" alt="Diseño de paginas web" class="img-fluid img-mobile">
           </div>
           
           
