probando animaciones over

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   
           <!-- Contenido imagen -->
           <div class="col-lg-6 position-relative hero-imagenes">
-            <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web" class="img-fluid img-desktop">
             <img src="/assets/images/DISEÑO PAGINA WEN MOBILE.png" alt="Diseño de paginas web" class="img-fluid img-mobile">
+            <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web" class="img-fluid img-desktop">
           </div>
           
           
@@ -340,6 +340,7 @@
     crossorigin="anonymous"></script>
 
   <script src="/assets/js/cookies.js"></script>
+  <script src="/assets/js/app.js"></script>
 </body>
 
 </html>
