--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <p class="lead animate-p">Creamos sitios web impactantes y optimizados para que tu pyme destaque en el mundo digital.
           </p>
           <!-- <button class="btn btn-primary btn-lg">¡Haz una cotización!</button> -->
-          <button class="btn-modern animate-button">
-            <span>Cotizar</span>
-          </button>
+          <a href="https://wa.me/5215523398704" target="_blank">
+            <button class="btn-modern animate-button">
+              <span>Cotizar</span>
+            </button>
+          </a>
         </div>
 
         <!-- Contenido imagen -->
@@ -78,8 +80,6 @@
           <img src="/assets/images/DISEÑO PAGINA WEN DESKTOP.png" alt="Diseño de paginas web"
             class="img-fluid img-desktop">
         </div>
-
-
       </div>
     </div>
   </section>
@@ -89,16 +89,16 @@
     <div class="container">
       <div class="row align-items-center">
         <!-- Imagen representativa -->
-        <div class="col-lg-5">
+        <div class="col-lg-5 animate-button">
           <img src="/assets/images/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Imagen representativa"
-            class="img-fluid">
+            class="img-fluid  img-main">
+
         </div>
 
         <!-- Contenido texto y lista -->
         <div class="col-lg-7">
-          <h2>¿Cansado de que tu negocio pase desapercibido en internet?</h2>
-          <p class="lead">¡Nosotros te ayudamos a cambiar eso! En Leads Don Che somos expertos en diseñar y posicionar
-            páginas web que no solo se ven bien, sino que también generan resultados.</p>
+          <h2>Obtén tu <span class="head-span" style="color: orange;">sitio web</span> hecho a la medida y atrae <span class="head-span" style="color: orange;">más clientes</span> y cierra <span class="head-span" style="color: orange;">más ventas</span>.</h2>
+          <p class="lead"></p>
 
           <!-- Lista de características -->
           <ul class="list-unstyled">
