--- a/index.html
+++ b/index.html
@@ -97,23 +97,17 @@
 
         <!-- Contenido texto y lista -->
         <div class="col-lg-7">
-          <h2>Obtén tu <span class="head-span" style="color: orange;">sitio web</span> hecho a la medida y atrae <span class="head-span" style="color: orange;">más clientes</span> y cierra <span class="head-span" style="color: orange;">más ventas</span>.</h2>
-          <p class="lead"></p>
+          <h2>Obtén tu <span class="head-span" style="color: orange;">sitio web</span> hecho a la medida, atrae <span class="head-span" style="color: orange;">más clientes</span> y cierra <span class="head-span" style="color: orange;">más ventas</span>.</h2>
 
           <!-- Lista de características -->
           <ul class="list-unstyled">
-            <li><i class="fa-solid fa-check"></i> Contamos con 4 años de experiencia trabajando con pymes de diversos
-              sectores.</li>
-            <li><i class="fa-solid fa-check"></i> Hemos ayudado a cientos de negocios a crecer y alcanzar sus objetivos.
-            </li>
-            <li><i class="fa-solid fa-check"></i> Te acompañamos en todo el proceso, desde la concepción de tu proyecto
-              hasta su lanzamiento.</li>
-            <li><i class="fa-solid fa-check"></i> Te ayudamos con el contenido multimedia para que tu negocio luzca
-              profesional.</li>
+            <li><i class="fa-solid fa-check"></i> Veloz</li>
+            <li><i class="fa-solid fa-check"></i> Claro y concizo</li>
+            <li><i class="fa-solid fa-check"></i> Diseño atractivo.</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para conversión.</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para Google.</li>
           </ul>
-
-          <!-- Call to Action -->
-          <button class="btn btn-primary btn-lg">Solicita más información</button>
+          <p class="lead">Lograr tus objetivos comerciales en internet sin un sitio web es igual a un pez queriendo trepar un árbol. </p>
         </div>
       </div>
     </div>
@@ -123,7 +117,7 @@
   <section class="servicios">
     <div class="container">
       <h2>Servicios que ofrecemos</h2>
-      <p class="lead">Descripción breve y atractiva sobre nuestros servicios.</p>
+      <p class="lead">Descubre la oferta de soluciones más transparente, sencilla y accesible.</p>
 
       <!-- Tarjetas de servicios -->
       <div class="row">
@@ -175,7 +169,9 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-lg">¡Haz una cotización</button>
+      <button class="btn-modern animate-button">
+        <span>Cotizar</span>
+      </button>
   </section>
 
   <!-- Sección de Testimonios -->
