animate button de servicios

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row align-items-center">
         <!-- Imagen representativa -->
         <div class="col-lg-5 animate-button">
-          <img src="/assets/images/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Imagen representativa"
+          <img src="/assets/images/camara_fotografica_dentro_de_local_de_comida.jpeg" alt="Contenido multimedia"
             class="img-fluid  img-main">
 
         </div>
@@ -103,9 +103,9 @@
           <ul class="list-unstyled">
             <li><i class="fa-solid fa-check"></i> Veloz</li>
             <li><i class="fa-solid fa-check"></i> Claro y concizo</li>
-            <li><i class="fa-solid fa-check"></i> Diseño atractivo.</li>
-            <li><i class="fa-solid fa-check"></i> Optimizado para conversión.</li>
-            <li><i class="fa-solid fa-check"></i> Optimizado para Google.</li>
+            <li><i class="fa-solid fa-check"></i> Diseño atractivo</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para conversión</li>
+            <li><i class="fa-solid fa-check"></i> Optimizado para Google</li>
           </ul>
           <p class="lead">Lograr tus objetivos comerciales en internet sin un sitio web es igual a un pez queriendo trepar un árbol. </p>
         </div>
@@ -163,15 +163,18 @@
             <img src="/assets/images/campa_as_publicitarias_sem.jpeg" alt="Campaña publicitaria" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">Campañas publicitarias SEM</h3>
-              <p class="card-text">Patrocina paginas web relacionadas a tu negocio para darte a conocer y generar mas
-                ventas.</p>
+              <p class="card-text">Google Ads puede ser una herramienta eficaz para impulsar las ventas y generar un mayor retorno de la inversión.</p>
             </div>
           </div>
         </div>
       </div>
-      <button class="btn-modern animate-button">
-        <span>Cotizar</span>
-      </button>
+      <p class="lead">Pregunta por el servicio que necesita tu negocio.</p>
+      <a href="https://wa.me/5215523398704" target="_blank">
+        <button class="btn-modern button-service">
+          <span>Preguntar</span>
+        </button>
+      </a>
+
   </section>
 
   <!-- Sección de Testimonios -->
