--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Diseño de Paginas Web | Leads Don Che</title>
+  <link rel="icon" type="image/x-icon" href="/assets/images/leads-don che.svg">
   <meta name="description"
     content="Agencia de desarrollo web y marketing digital en Puebla. Expertos en diseño de landing page. Creacion de sitios web con animaciones. Promocionando en Google Ads. Publicaciones de Faceebook Ads.">
 
