descarga la guía

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           </ul>
           <p class="lead">Lograr tus objetivos comerciales en internet sin un sitio web es igual a un pez queriendo
             trepar un árbol. </p>
+            <a href="/assets/doc/Como impulsar tu negocio en internet.pdf" download="nombre-del-archivo.pdf" class="btn btn-primary">Descarga la guía gratuita</a>
         </div>
       </div>
     </div>
