--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <div class="card-body">
               <h3 class="card-title">Diseño web personalizado</h3>
               <p class="card-text">Creamos sitios web únicos y adaptados a tu marca y necesidades.</p>
+              <p>Desde $900.00 MXN</p>
             </div>
           </div>
         </div>
@@ -149,6 +150,7 @@
             <div class="card-body">
               <h3 class="card-title">Posicionamiento SEO</h3>
               <p class="card-text"> Hacemos que tu página web aparezca en los primeros resultados de búsqueda.</p>
+              <P>Desde $1,000.00 MXN/mes</P>
             </div>
           </div>
         </div>
@@ -162,6 +164,7 @@
               <h3 class="card-title">Contenido multimedia de calidad</h3>
               <p class="card-text">Desarrollamos videos, imágenes y otros materiales para enriquecer tu presencia en
                 línea.</p>
+                <p>Desde $1,500.00 MXN</p>
             </div>
           </div>
         </div>
@@ -174,6 +177,7 @@
               <h3 class="card-title">Campañas publicitarias SEM</h3>
               <p class="card-text">Google Ads puede ser una herramienta eficaz para impulsar las ventas y generar un
                 mayor retorno de la inversión.</p>
+                <p>Desde $1,000.00 MXN</p>
             </div>
           </div>
         </div>
